--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 			'https://medminder--dev.sandbox.my.site.com/customerservice',
 			gslbBaseURL,
 			'00D8G0000008gXK',
-			'Chat',
+			'TestChat',
 			{
 				baseLiveAgentContentURL: 'https://c.la2s-core1.sfdc-8tgtt5.salesforceliveagent.com/content',
-				deploymentId: '5728G000000003P',
-				buttonId: '5738G000000003e',
+				deploymentId: '572Va00000079Un',
+				buttonId: '573Va0000001Qy9',
 				baseLiveAgentURL: 'https://d.la2s-core1.sfdc-8tgtt5.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I8G000000CaVYUA0_17e4f287c56',
-				isOfflineSupportEnabled: true
+				eswLiveAgentDevName: 'TestChat',
+				isOfflineSupportEnabled: false
 			}
 		);
 	};
