--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				buttonId: '573Va0000001Qy9',
 				baseLiveAgentURL: 'https://d.la2s-core1.sfdc-8tgtt5.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'TestChat',
-				isOfflineSupportEnabled: false
+				isOfflineSupportEnabled: true
 			}
 		);
 	};
